# QtQuickApplicationTest

./: .gitignore  CMakeLists.txt  MainWindows.h  QtQuickApplicationTest.vcxproj  QtQuickApplicationTest.vcxproj.filters  main.cpp  myqmlcomponent.cpp  readme.md
x64/Debug/: QtQuickApplicationTest.exe.recipe
x64/Debug/QtQuickA.DE308EFE.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  QtQuickApplicationTest.lastbuildstate  QtQuickApplicationTest.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  rcc.read.1u.tlog  rcc.write.1u.tlog
x64/Debug/qmake/: qtvars_x64_Debug.props
x64/Debug/qmake/temp/: .qmake.stash  qtvars.vcxproj  qtvars.vcxproj.filters
x64/Debug/rcc/: qrc_qml.cpp
